--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-markdown": "^10.1.0",
     "react": "^19.2.1",
     "@google/genai": "^1.31.0",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "hono": "^4.10.7",
+    "@hono/node-server": "^1.19.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
