--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-markdown": "^10.1.0",
+    "hono": "^4.10.7",
+    "@hono/node-server": "^1.19.6",
     "react": "^19.2.1",
     "@google/genai": "^1.31.0",
-    "react-dom": "^19.2.1",
-    "hono": "^4.10.7",
-    "@hono/node-server": "^1.19.6"
+    "react-markdown": "^10.1.0",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
