--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@google/genai": "^1.31.0",
     "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
-    "@hono/node-server": "^1.19.6"
+    "@hono/node-server": "^1.19.6",
+    "path": "^0.12.7",
+    "fs": "^0.0.1-security",
+    "better-sqlite3": "^12.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
