feat: Add lightweight admin dashboard Integrates a server-side rendered admin dashboard directly into the application.
This change introduces:
- A new `/admin` route for accessing the dashboard.
- Server-side HTML generation using Alpine.js and Tailwind CSS for a minimal client-side footprint.
- Basic administrative functionalities like viewing system statistics and managing users.
- JWT role-based access control for the admin section.
- Updated package dependencies (`better-sqlite3`) and documentation reflecting these changes.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "@hono/node-server": "^1.19.6",
-    "path": "^0.12.7",
+    "better-sqlite3": "^12.5.0",
     "fs": "^0.0.1-security",
-    "better-sqlite3": "^12.5.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
