--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@hono/node-server": "^1.19.6",
     "better-sqlite3": "^12.5.0",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
