--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "天工造文---ai爆款小说生成器",
-  "private": true,
-  "version": "0.0.0",
+  "name": "skycraft-novel-ai",
+  "version": "3.5.0",
+  "description": "天工造文 - AI爆款小说生成器",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "tsx watch server/index.ts",
+    "start": "node dist/server/index.js",
+    "build": "tsc"
   },
   "dependencies": {
-    "hono": "^4.10.7",
-    "react": "^19.2.1",
-    "@google/genai": "^1.31.0",
-    "react-dom": "^19.2.1",
-    "react-markdown": "^10.1.0",
-    "@hono/node-server": "^1.19.6",
-    "better-sqlite3": "^12.5.0",
-    "fs": "^0.0.1-security",
-    "path": "^0.12.7",
-    "zod": "^3.24.1"
+    "@google/genai": "^0.1.0",
+    "@hono/node-server": "^1.11.1",
+    "better-sqlite3": "^11.0.0",
+    "dotenv": "^16.4.5",
+    "hono": "^4.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/better-sqlite3": "^7.6.10",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "tsx": "^4.15.1",
+    "typescript": "^5.4.5"
   }
 }
